# hypatia

./: .gitignore  AstroOps.cpp  AstroOps.h  CMakeLists.txt  LICENSE  LICENSE.md  Lunar.cpp  Lunar.h  Makefile  MathOps.cpp  MathOps.h  ObsInf.cpp  ObsInf.h  PlanetData.cpp  Pluto.h  README.md  TimeOps.h  Vsop.cpp  Vsop.h  astro.i  hypatia.i  pyproject.toml  setup.py
data/: cities.csv  countries.csv  create_arrays.py  create_json.py  get_stars.py  timezones.csv
docs/: CMakeLists.txt  mainpage.md
include/hypatia/: Body.h  Constellation.h  CoordOps.h  GeoOps.h  Luna.h  MathOps.h  Observer.h  ProjOps.h  Satellite.h  Star.h  TimeOps.h
include/hypatia/coordinates/: ECI.h  Ecliptic.h  Equatorial.h  Galactic.h  Geodetic.h  Horizontal.h  PrecessionMatrix.h  Tile.h  UTM.h
include/hypatia/models/: Pluto.h  SGP4.h  TLE.h  VSOP87.h
include/hypatia/primitives/: BoundingBox.h  Matrix3x3.h  Polar.h  Vector.h  Vector2.h  Vector3.h
src/: AstroOps.cpp  AstroOps.h  Body.cpp  Body.h  CMakeLists.txt  Constellation.cpp  Constellation.h  CoordOps.cpp  CoordOps.h  EcPoint.cpp  EcPoint.h  EqPoint.cpp  EqPoint.h  GeoOps.cpp  GeoPoint.cpp  GeoPoint.h  HorPoint.cpp  HorPoint.h  Luna.cpp  Luna.h  Lunar.cpp  Lunar.h  MathOps.cpp  MathOps.h  ObsInf.cpp  ObsInf.h  Observer.cpp  Observer.h  PlanetData.h  Pluto.cpp  ProjOps.cpp  ProjOps.h  Satellite.cpp  Satellite.h  Star.cpp  Star.h  TimeOps.cpp  TimeOps.h  Vector.cpp  Vector.h  (+2 more)
src/coordinates/: ECI.cpp  ECI.h  Eci.cpp  Eci.h  Ecliptic.cpp  Ecliptic.h  Equatorial.cpp  Equatorial.h  Galactic.cpp  Galactic.h  Geodetic.cpp  Geodetic.h  Horizontal.cpp  Horizontal.h  PrecessionMatrix.cpp  Tile.cpp
src/models/: Orbit.cpp  Orbit.h  Pluto.cpp  Pluto.h  SGP4.cpp  SGP4.h  TLE.cpp  TLE.h  VSOP.cpp  VSOP87.cpp  VSOP87.h
src/planets/: Pluto.cpp
src/primitives/: DateTime.cpp  DateTime.h  Matrix3x3.cpp  Polar.cpp  Polar.h  TimeSpan.cpp  TimeSpan.h  Vector.cpp  Vector.h  Vector2.cpp  Vector3.cpp
src/satellites/: Exception.h  Luna.cpp  Luna.h  SGP4.cpp  Sgp4.h
test/: AstroOps.py  Body.py  CMakeLists.txt  TimeOps.py  geo.cpp
tests/: TimeOps.py  tiles.cpp
